- Add annotation classes - Update javadoc comments